# CodeM8

./: .coderabbit.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  coderabbit-review.yml
src/: cli.rs  discovery.rs  duplicate.rs  error.rs  git.rs  language.rs  lib.rs  line.rs  main.rs  model.rs  paths.rs  report.rs
src/cli/: args.rs  help.rs  mod.rs  version.rs
src/discovery/: explicit.rs  git.rs  mod.rs  recursive.rs
src/language/: classification.rs  mod.rs  patterns.rs  registry.rs
src/report/: complexity_detection.rs  complexity_renderer.rs  duplicate_detection.rs  duplicate_renderer.rs  java_cognitive.rs  mod.rs
