[package]
name = "codem8"
version = "0.7.2"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "A deterministic source code analysis CLI for duplicate code reports."
repository = "https://github.com/b4prog/CodeM8"
keywords = ["cli", "duplicate-detection", "source-code", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4"
rayon = "1"
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
